--- a/App/settings.gradle
+++ b/App/settings.gradle
@@ -10,6 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven{url 'https://repo.eclipse.org/content/repositories/paho-snapshots/'}
     }
 }
 
