Add Github action and set build name
Signed-off-by: Mateusz Krawczuk <mat.krawczuk@gmail.com>

--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -13,7 +13,8 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
-
+        //or so
+        archivesBaseName = "$applicationId"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
