Use default builder
Signed-off-by: Mateusz Krawczuk <mat.krawczuk@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-on-ubuntu:
     name: Build on Ubuntu
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
