--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.androidApplication)
+    alias(libs.plugins.jetbrainsKotlinAndroid)
+    alias(libs.plugins.ksp)
+    alias(libs.plugins.hilt)
 }
 
 android {
@@ -57,6 +59,11 @@ dependencies {
     implementation libs.androidx.compose.ui.graphics
     implementation libs.androidx.compose.ui.tooling
     implementation libs.androidx.compose.material3
+
+    ksp(libs.hilt.android.compiler)
+    implementation(libs.hilt.android)
+    // kspAndroidTest(libs.hilt.android.compiler)
+    // androidTestImplementation(libs.hilt.android.testing)
 
     implementation libs.paho.client
     implementation libs.paho.service
