--- a/App/gradle/libs.versions.toml
+++ b/App/gradle/libs.versions.toml
@@ -7,7 +7,10 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.0"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
-composeBom = "2024.02.01"
+composeBom = "2024.02.02"
+ksp = "1.9.22-1.0.17"
+hilt = "2.50"
+
 
 rxAndroidBLE = "1.18.1"
 paho = "1.0.2"
@@ -28,6 +31,9 @@ androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+
 rxAndroidBLE = { group = "com.polidea.rxandroidble3", name = "rxandroidble", version.ref = "rxAndroidBLE" }
 paho-client = { group = "org.eclipse.paho", name = "org.eclipse.paho.client.mqttv3", version.ref = "paho" }
 paho-service = { group = "org.eclipse.paho", name = "org.eclipse.paho.android.service", version.ref = "paho" }
@@ -35,3 +41,5 @@ paho-service = { group = "org.eclipse.paho", name = "org.eclipse.paho.android.se
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
