Add: Permission check and basic scanning for Bluetooth Devices
Signed-off-by: Mateusz Krawczuk <mat.krawczuk@gmail.com>

--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     // kspAndroidTest(libs.hilt.android.compiler)
     // androidTestImplementation(libs.hilt.android.testing)
 
+    implementation libs.accompanist.permissions
+
     implementation libs.paho.client
     implementation libs.paho.service
     implementation libs.rxAndroidBLE
