--- a/App/gradle/libs.versions.toml
+++ b/App/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistPermissions = "0.30.1"
 agp = "8.2.2"
 kotlin = "1.9.22"
 coreKtx = "1.12.0"
@@ -16,6 +17,7 @@ rxAndroidBLE = "1.18.1"
 paho = "1.0.2"
 
 [libraries]
+accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
