Add: Timber for logs
Signed-off-by: Mateusz Krawczuk <mat.krawczuk@gmail.com>

--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     implementation libs.accompanist.permissions
 
+    implementation libs.timber
     implementation libs.paho.client
     implementation libs.paho.service
     implementation libs.rxAndroidBLE
